--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ItzJusTragic</title>
-  <meta name="description" content="Retro hacker-style biolink card with audio player, volume slider, social icons and Matrix rain background."/>
+  <meta name="description" content="All my socials."/>
 
   <!-- Favicon / tab icon -->
   <link rel="icon" href="https://github.com/itsjustragic/socials/raw/main/tr.png" type="image/png">
@@ -689,3 +689,4 @@ const $$ = (sel, ctx=document) => Array.from(ctx.querySelectorAll(sel));
 
 </body>
 </html>
+
