--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="All my socials."/>
 
   <!-- Favicon / tab icon -->
-  <link rel="icon" href="https://github.com/itsjustragic/social/raw/main/tr.png" type="image/png">
+  <link rel="icon" href="https://github.com/itsjustragic/social/raw/main/IMG_9623.jpg" type="image/png">
   <link rel="preconnect" href="https://img.icons8.com" crossorigin>
 
   <style>
@@ -689,6 +689,7 @@ const $$ = (sel, ctx=document) => Array.from(ctx.querySelectorAll(sel));
 
 </body>
 </html>
+
 
 
 
