--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="All my socials."/>
 
   <!-- Favicon / tab icon -->
-  <link rel="icon" href="https://github.com/itsjustragic/social/raw/main/IMG_9623.jpg" type="image/png">
+  <link rel="icon" href="https://github.com/itsjustragic/social/raw/main/tr.png" type="image/png">
   <link rel="preconnect" href="https://img.icons8.com" crossorigin>
 
   <style>
@@ -106,7 +106,7 @@
   <main class="card" role="region" aria-label="Profile card">
     <header class="header">
       <div class="avatar" title="Avatar">
-        <img src="tr.png" alt="avatar"/>
+        <img src="https://github.com/itsjustragic/social/raw/main/IMG_9623.jpg" alt="avatar"/>
       </div>
       <div class="title">ItzJusTragic</div>
       <div class="subtitle">Streamer &amp; Content Creator</div>
@@ -689,6 +689,7 @@ const $$ = (sel, ctx=document) => Array.from(ctx.querySelectorAll(sel));
 
 </body>
 </html>
+
 
 
 
