--- a/index.html
+++ b/index.html
@@ -103,62 +103,64 @@
     <div class="center-glow"></div>
   </div>
 
-  <main class="card" role="region" aria-label="Profile card">
-    <header class="header">
-      <div class="avatar" title="Avatar">
-        <img src="https://github.com/itsjustragic/social/raw/main/IMG_9623.jpg" alt="avatar"/>
+<main class="card" role="region" aria-label="Profile card">
+  <header class="header">
+    <div class="avatar" title="Avatar">
+      <img src="https://github.com/itsjustragic/social/raw/main/IMG_9623.jpg" alt="avatar"/>
+    </div>
+    <div class="title">ItzJusTragic</div>
+    <div class="subtitle">Streamer &amp; Content Creator</div>
+
+    <div class="icon-row" style="margin-top:8px;">
+      <svg width="20" height="20" viewBox="0 0 24 24" style="filter:drop-shadow(0 0 6px rgba(0,255,106,0.08));">
+        <path fill="none" stroke="rgba(0,255,106,0.6)" stroke-width="1.2" d="M3 12h18"></path>
+      </svg>
+    </div>
+  </header>
+
+  <section class="links" aria-label="Links">
+    <a class="link" href="https://twitch.tv/itzjustragic" target="_blank" rel="noopener" data-copy="https://twitch.tv/itzjustragic">
+      <div class="icon"><img src="https://img.icons8.com/ios-filled/50/00ff00/twitch.png" alt="Twitch icon"/></div>
+      <div class="meta">
+        <div class="label">Twitch</div>
+        <div class="desc">Live streams</div>
       </div>
-      <div class="title">ItzJusTragic</div>
-      <div class="subtitle">Streamer &amp; Content Creator</div>
+    </a>
 
-      <div class="icon-row" style="margin-top:8px;">
-        <svg width="20" height="20" viewBox="0 0 24 24" style="filter:drop-shadow(0 0 6px rgba(0,255,106,0.08));">
-          <path fill="none" stroke="rgba(0,255,106,0.6)" stroke-width="1.2" d="M3 12h18"></path>
-        </svg>
+    <a class="link" href="https://instagram.com/itsjustragic" target="_blank" rel="noopener" data-copy="https://instagram.com/itsjustragic">
+      <div class="icon"><img src="https://img.icons8.com/ios-filled/50/00ff00/instagram-new.png" alt="Instagram icon"/></div>
+      <div class="meta">
+        <div class="label">Instagram</div>
+        <div class="desc">@itsjustragic</div>
       </div>
-    </header>
+    </a>
 
-    <section class="links" aria-label="Links">
-      <a class="link" href="https://twitter.com/itsjustragic" target="_blank" rel="noopener" data-copy="https://twitter.com/itsjustragic">
-        <div class="icon"><img src="https://img.icons8.com/ios-filled/50/00ff00/twitter.png" alt="Twitter icon"/></div>
-        <div class="meta">
-          <div class="label">Twitter</div>
-          <div class="desc">@itsjustragic</div>
-        </div>
-      </a>
+    <a class="link" href="https://www.tiktok.com/@itsjustragic" target="_blank" rel="noopener" data-copy="https://www.tiktok.com/@itsjustragic">
+      <div class="icon"><img src="https://img.icons8.com/ios-filled/50/00ff00/tiktok.png" alt="TikTok icon"/></div>
+      <div class="meta">
+        <div class="label">TikTok</div>
+        <div class="desc">@itsjustragic</div>
+      </div>
+    </a>
 
-      <a class="link" href="https://twitch.tv/itzjustragic" target="_blank" rel="noopener" data-copy="https://twitch.tv/itzjustragic">
-        <div class="icon"><img src="https://img.icons8.com/ios-filled/50/00ff00/twitch.png" alt="Twitch icon"/></div>
-        <div class="meta">
-          <div class="label">Twitch</div>
-          <div class="desc">Live streams</div>
-        </div>
-      </a>
+    <a class="link" href="https://twitter.com/itsjustragic" target="_blank" rel="noopener" data-copy="https://twitter.com/itsjustragic">
+      <div class="icon"><img src="https://img.icons8.com/ios-filled/50/00ff00/twitter.png" alt="Twitter icon"/></div>
+      <div class="meta">
+        <div class="label">Twitter</div>
+        <div class="desc">@itsjustragic</div>
+      </div>
+    </a>
 
-      <a class="link" href="https://discord.gg/Jg7FGGhmSH" target="_blank" rel="noopener" data-copy="https://discord.gg/Jg7FGGhmSH">
-        <div class="icon"><img src="https://img.icons8.com/ios-filled/50/00ff00/discord-logo.png" alt="Discord icon"/></div>
-        <div class="meta">
-          <div class="label">Discord</div>
-          <div class="desc">Join the server</div>
-        </div>
-      </a>
+    <a class="link" href="https://discord.gg/Jg7FGGhmSH" target="_blank" rel="noopener" data-copy="https://discord.gg/Jg7FGGhmSH">
+      <div class="icon"><img src="https://img.icons8.com/ios-filled/50/00ff00/discord-logo.png" alt="Discord icon"/></div>
+      <div class="meta">
+        <div class="label">Discord</div>
+        <div class="desc">Join the server</div>
+      </div>
+    </a>
+  </section>
+</main>
 
-      <a class="link" href="https://instagram.com/itsjustragic" target="_blank" rel="noopener" data-copy="https://instagram.com/itsjustragic">
-        <div class="icon"><img src="https://img.icons8.com/ios-filled/50/00ff00/instagram-new.png" alt="Instagram icon"/></div>
-        <div class="meta">
-          <div class="label">Instagram</div>
-          <div class="desc">@itsjustragic</div>
-        </div>
-      </a>
-
-      <a class="link" href="https://www.tiktok.com/@itsjustragic" target="_blank" rel="noopener" data-copy="https://www.tiktok.com/@itsjustragic">
-        <div class="icon"><img src="https://img.icons8.com/ios-filled/50/00ff00/tiktok.png" alt="TikTok icon"/></div>
-        <div class="meta">
-          <div class="label">TikTok</div>
-          <div class="desc">@itsjustragic</div>
-        </div>
-      </a>
-    </section>
 
     <div class="utils" aria-hidden="false">
       <div class="badges" style="display:none"></div>
@@ -689,6 +691,7 @@ const $$ = (sel, ctx=document) => Array.from(ctx.querySelectorAll(sel));
 
 </body>
 </html>
+
 
 
 
