--- a/index.html
+++ b/index.html
@@ -119,27 +119,12 @@
     </header>
 
     <section class="links" aria-label="Links">
-      <a class="link" href="https://twitter.com/itsjustragic" target="_blank" rel="noopener" data-copy="https://twitter.com/itsjustragic">
-        <div class="icon"><img src="https://img.icons8.com/ios-filled/50/00ff00/twitter.png" alt="Twitter icon"/></div>
-        <div class="meta">
-          <div class="label">Twitter</div>
-          <div class="desc">@itsjustragic</div>
-        </div>
-      </a>
-
+      <!-- Reordered: Twitch, Instagram, TikTok, Twitter, Discord -->
       <a class="link" href="https://twitch.tv/itzjustragic" target="_blank" rel="noopener" data-copy="https://twitch.tv/itzjustragic">
         <div class="icon"><img src="https://img.icons8.com/ios-filled/50/00ff00/twitch.png" alt="Twitch icon"/></div>
         <div class="meta">
           <div class="label">Twitch</div>
           <div class="desc">Live streams</div>
-        </div>
-      </a>
-
-      <a class="link" href="https://discord.gg/Jg7FGGhmSH" target="_blank" rel="noopener" data-copy="https://discord.gg/Jg7FGGhmSH">
-        <div class="icon"><img src="https://img.icons8.com/ios-filled/50/00ff00/discord-logo.png" alt="Discord icon"/></div>
-        <div class="meta">
-          <div class="label">Discord</div>
-          <div class="desc">Join the server</div>
         </div>
       </a>
 
@@ -156,6 +141,22 @@
         <div class="meta">
           <div class="label">TikTok</div>
           <div class="desc">@itsjustragic</div>
+        </div>
+      </a>
+
+      <a class="link" href="https://twitter.com/itsjustragic" target="_blank" rel="noopener" data-copy="https://twitter.com/itsjustragic">
+        <div class="icon"><img src="https://img.icons8.com/ios-filled/50/00ff00/twitter.png" alt="Twitter icon"/></div>
+        <div class="meta">
+          <div class="label">Twitter</div>
+          <div class="desc">@itsjustragic</div>
+        </div>
+      </a>
+
+      <a class="link" href="https://discord.gg/Jg7FGGhmSH" target="_blank" rel="noopener" data-copy="https://discord.gg/Jg7FGGhmSH">
+        <div class="icon"><img src="https://img.icons8.com/ios-filled/50/00ff00/discord-logo.png" alt="Discord icon"/></div>
+        <div class="meta">
+          <div class="label">Discord</div>
+          <div class="desc">Join the server</div>
         </div>
       </a>
     </section>
@@ -689,9 +690,3 @@ const $$ = (sel, ctx=document) => Array.from(ctx.querySelectorAll(sel));
 
 </body>
 </html>
-
-
-
-
-
-
