--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     </div>
 
     <footer class="footer" role="contentinfo">
-      <div>Made by <span style="color:var(--neon)">crownedapex</span></div>
+      <div>Cooked by <span style="color:var(--neon)">crownedapex</span></div>
       <div>
         <a href="#" id="copyCard" title="Copy profile link">Copy link</a> •
         <a href="#" id="toggleRain" title="Toggle matrix rain">Toggle rain</a>
@@ -690,3 +690,4 @@ const $$ = (sel, ctx=document) => Array.from(ctx.querySelectorAll(sel));
 
 </body>
 </html>
+
